# maa-framework-rs

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  README_zh.md  build.rs
.github/: cliff.toml
.github/workflows/: deploy-doc.yml  release.yml  test.yml  update-bindings.yml
doc/: index.html
examples/: main.rs
examples/sample/resource/: default_pipeline.json
examples/sample/resource/pipeline/: pipeline.json
install/share/cmake/MaaAgentServer/: MaaAgentServer-debug.cmake  MaaAgentServer.cmake
install/share/cmake/MaaFramework/: MaaFramework-debug.cmake  MaaFramework.cmake
install/test/PipelineSmoking/: MaaRecording.txt
install/test/PipelineSmoking/resource/: .gitignore  default_pipeline.json
install/test/PipelineSmoking/resource/pipeline/: awards.json  startup.json  wilderness.json
maa-framework/: Cargo.toml
maa-framework-sys/: Cargo.toml  build.rs
maa-framework-sys/cmake/: CMakeLists.txt
maa-framework-sys/headers/: maa.h  wrapper.h
maa-framework-sys/src/: lib.rs
maa-framework-sys/src/bindings/: dynamic_bindings.rs  shims.rs  static_bindings.rs
maa-framework/examples/: main.rs
maa-framework/src/: agent_client.rs  agent_server.rs  buffer.rs  callback.rs  common.rs  context.rs  controller.rs  custom.rs  custom_controller.rs  error.rs  job.rs  lib.rs  notification.rs  pipeline.rs  resource.rs  tasker.rs  toolkit.rs  util.rs
maa-framework/tests/: agent_test.rs  binding_test.rs  common.rs  pipeline_test.rs
sample/resource/pipeline/: pipeline.json
share/cmake/MaaAgentServer/: MaaAgentServer-relwithdebinfo.cmake
share/cmake/MaaFramework/: MaaFramework-relwithdebinfo.cmake
src/: buffer.rs  callback.rs  common.rs  context.rs  controller.rs  custom.rs  custom_controller.rs  diff_task.rs  error.rs  event_sink.rs  instance.rs  internal.rs  job.rs  lib.rs  msg.rs  notification.rs  pipeline.rs  resource.rs  sync_context.rs  sys.rs  tasker.rs  toolkit.rs  utility.rs
src/bindings/: shims.rs
src/buffer/: image_buffer.rs  image_list_buffer.rs  rect_buffer.rs  string_buffer.rs
src/controller/: adb.rs  dbg.rs  win32.rs
src/custom/: custom_action.rs  custom_controller.rs  custom_recognizer.rs
symbols/: libMaaCustomControlUnit.so.debug  libc++.so.1.debug  libc++abi.so.1.debug  libfastdeploy_ppocr.so.debug  libonnxruntime.so.1.debug  libopencv_world4.so.411.debug  libunwind.so.1.debug
tests/: agent_test.rs  binding_test.rs  pipeline_test.rs  test_custom_recognizer.rs
