[workspace]
resolver = "3"
members = ["maa-framework", "maa-framework-sys"]

[workspace.package]
version = "1.5.0"
authors = ["MaaFramework Contributors"]
edition = "2024"
license = "LGPL-3.0"
homepage = "https://github.com/MaaXYZ/MaaFramework"
repository = "https://github.com/MaaXYZ/MaaFramework"

[workspace.dependencies]
maa-framework-sys = { path = "maa-framework-sys", version = "5.7.0-beta.6" }
