[package]
name = "maa-framework-sys"
version = "1.0.0"
edition = "2021"
authors = ["MaaFramework Contributors"]
description = "Rust bindings for MaaFramework"
license = "LGPL-3.0"
homepage = "https://github.com/MaaXYZ/MaaFramework"
repository = "https://github.com/MaaXYZ/MaaFramework"
keywords = ["maa", "automation", "framework", "binding"]
categories = ["api-bindings", "development-tools"]
exclude = ["MaaFramework", "install", "download_plugins", ".github", ".vscode"]

[dependencies]
libloading = { version = "0.8", optional = true }
once_cell = { version = "1.19", optional = true }

[build-dependencies]
bindgen = "0.72.1"
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"

[features]
static = []
dynamic = ["dep:libloading", "dep:once_cell"]
toolkit = []
